--- a/src/main/asciidoc/js/eventbus.adoc
+++ b/src/main/asciidoc/js/eventbus.adoc
@@ -206,6 +206,10 @@ eventBus.send("news.uk.sport", "Yay! Someone kicked a ball");
 
 include::override/eventbus_headers.adoc[]
 
+==== Message ordering
+
+Vert.x will deliver messages to any particular handler in the same order they were sent from any particular sender.
+
 ==== The Message object
 
 The object you receive in a message handler is a `link:jsdoc/message-Message.html[Message]`.
@@ -256,7 +260,7 @@ consisting of multiple rounds.
 
 ==== Sending with timeouts
 
-When sending a message with a reply handler you can specify a timeout in the `link:../cheatsheet/DeliveryOptions.html[DeliveryOptions]`.
+When sending a message with a reply handler you can specify a timeout in the `link:../dataobjects.html#DeliveryOptions[DeliveryOptions]`.
 
 If a reply is not received within that time, the reply handler will be called with a failure.
 
