--- a/src/main/asciidoc/js/http.adoc
+++ b/src/main/asciidoc/js/http.adoc
@@ -15,7 +15,7 @@ var server = vertx.createHttpServer();
 
 === Configuring an HTTP server
 
-If you don't want the default, a server can be configured by passing in a `link:../cheatsheet/HttpServerOptions.html[HttpServerOptions]`
+If you don't want the default, a server can be configured by passing in a `link:../dataobjects.html#HttpServerOptions[HttpServerOptions]`
 instance when creating it:
 
 [source,js]
@@ -459,7 +459,7 @@ You can close the underlying TCP connection with `link:jsdoc/http_server_respons
 Non keep-alive connections will be automatically closed by Vert.x when the response is ended.
 
 Keep-alive connections are not automatically closed by Vert.x by default. If you want keep-alive connections to be
-closed after an idle time, then you configure `link:../cheatsheet/HttpServerOptions.html#idleTimeout[idleTimeout]`.
+closed after an idle time, then you configure `link:../dataobjects.html#HttpServerOptions#setIdleTimeout[idleTimeout]`.
 
 ==== Setting response headers
 
@@ -652,7 +652,7 @@ If the client does not support HTTP compression the responses are sent back with
 
 This allows to handle Client that support HTTP Compression and those that not support it at the same time.
 
-To enable compression use can configure it with `link:../cheatsheet/HttpServerOptions.html#compressionSupported[compressionSupported]`.
+To enable compression use can configure it with `link:../dataobjects.html#HttpServerOptions#setCompressionSupported[compressionSupported]`.
 
 By default compression is not enabled.
 
@@ -1210,7 +1210,7 @@ request.continueHandler(function (v) {
 
 On the server side a Vert.x http server can be configured to automatically send back 100 Continue interim responses
 when it receives an `Expect: 100-Continue` header.
-This is done by setting the option `link:../cheatsheet/HttpServerOptions.html#handle100ContinueAutomatically[handle100ContinueAutomatically]`.
+This is done by setting the option `link:../dataobjects.html#HttpServerOptions#setHandle100ContinueAutomatically[handle100ContinueAutomatically]`.
 
 If you'd prefer to decide whether to send back continue responses manually, then this property should be set to
 `false` (the default), then you can inspect the headers and call `link:jsdoc/http_server_response-HttpServerResponse.html#writeContinue[writeContinue]`
@@ -1242,7 +1242,7 @@ If the body of the response was compressed via gzip it will include for example 
 
  Content-Encoding: gzip
 
-To enable compression set `link:../cheatsheet/HttpClientOptions.html#tryUseCompression[tryUseCompression]` on the options
+To enable compression set `link:../dataobjects.html#HttpClientOptions#setTryUseCompression[tryUseCompression]` on the options
 used when creating the client.
 
 By default compression is disabled.
@@ -1254,23 +1254,22 @@ connections when you're making multiple requests to the same server.
 
 The http client supports pooling of connections, allowing you to reuse connections between requests.
 
-For pooling to work, keep alive must be true using `link:../cheatsheet/HttpClientOptions.html#keepAlive[keepAlive]`
+For pooling to work, keep alive must be true using `link:../dataobjects.html#HttpClientOptions#setKeepAlive[keepAlive]`
 on the options used when configuring the client. The default value is true.
 
 When keep alive is enabled. Vert.x will add a `Connection: Keep-Alive` header to each HTTP/1.0 request sent.
 When keep alive is disabled. Vert.x will add a `Connection: Close` header to each HTTP/1.1 request sent to signal
 that the connection will be closed after completion of the response.
 
-The maximum number of connections to pool *for each server* is configured using `link:../cheatsheet/HttpClientOptions.html#maxPoolSize[maxPoolSize]`
+The maximum number of connections to pool *for each server* is configured using `link:../dataobjects.html#HttpClientOptions#setMaxPoolSize[maxPoolSize]`
 
 When making a request with pooling enabled, Vert.x will create a new connection if there are less than the maximum number of
 connections already created for that server, otherwise it will add the request to a queue.
 
-When a response returns, if there are pending requests for the server, then the connection will be reused, otherwise
-it will be closed.
+Keep alive connections will not be closed by the client automatically. To close them you can close the client instance.
 
-This gives the benefits of keep alive when the client is loaded but means we don't keep connections hanging around
-unnecessarily when there would be no benefits anyway.
+Alternatively you can set idle timeout using `link:../dataobjects.html#HttpClientOptions#setIdleTimeout[idleTimeout]` - any
+connections not used within this timeout will be closed. Please note the idle timeout value is in seconds not milliseconds.
 
 === Pipe-lining
 
@@ -1279,13 +1278,10 @@ The client also supports pipe-lining of requests on a connection.
 Pipe-lining means another request is sent on the same connection before the response from the preceding one has
 returned. Pipe-lining is not appropriate for all requests.
 
-To enable pipe-lining, it must be enabled using `link:../cheatsheet/HttpClientOptions.html#pipelining[pipelining]`.
+To enable pipe-lining, it must be enabled using `link:../dataobjects.html#HttpClientOptions#setPipelining[pipelining]`.
 By default pipe-lining is disabled.
 
 When pipe-lining is enabled requests will be written to connections without waiting for previous responses to return.
-
-When pipe-line responses return at the client, the connection will be automatically closed when all in-flight
-responses have returned and there are no outstanding pending requests to write.
 
 === Server sharing
 
@@ -1448,7 +1444,7 @@ websocket.writeBinaryMessage(buffer);
 ----
 
 If the WebSocket message is larger than the maximum websocket frame size as configured with
-`link:../cheatsheet/HttpClientOptions.html#maxWebsocketFrameSize[maxWebsocketFrameSize]`
+`link:../dataobjects.html#HttpClientOptions#setMaxWebsocketFrameSize[maxWebsocketFrameSize]`
 then Vert.x will split it into multiple WebSocket frames before sending it on the wire.
 
 ==== Writing frames to WebSockets
