--- a/src/main/asciidoc/js/index.adoc
+++ b/src/main/asciidoc/js/index.adoc
@@ -830,7 +830,8 @@ NOTE: The JDK is required to support on the fly compilation of Java code.
 
 === Run verticles
 
-You can run raw Vert.x verticles directly from the command line using `vertx run`. Here is a couple of examples:
+You can run raw Vert.x verticles directly from the command line using `vertx run`. Here is a couple of examples of
+the `run` _command_:
 
 [source]
 ----
@@ -893,6 +894,8 @@ one instance. If omitted a single instance will be deployed.
  * `-hagroup` - used in conjunction with `-ha`. It specifies the HA group this node will join. There can be
  multiple HA groups in a cluster. Nodes will only failover to other nodes in the same group. The default value is `
  +++__DEFAULT__+++`
+
+You can also set system properties using: `-Dkey=value`.
 
 Here are some more examples:
 
@@ -969,13 +972,13 @@ java -jar my-application-fat.jar
 There is nothing really Vert.x specific about this, you could do this with any Java application
 
 You can either create your own main class and specify that in the manifest, but it's recommended that you write your
-code as verticles and use the Vert.x `Starter` class as your main class. This is the same main class used when running
-Vert.x at the command line and therefore allows you to specify command line arguments, such as `-instances` in order
-to scale your application more easily.
+code as verticles and use the Vert.x `Launcher` class (`io.vertx.core.Launcher`) as your main
+class. This is the same main class used when running Vert.x at the command line and therefore allows you to
+specify command line arguments, such as `-instances` in order to scale your application more easily.
 
 To deploy your verticle in a _fatjar_ like this you must have a _manifest_ with:
 
-* `Main-Class` set to `io.vertx.core.Starter`
+* `Main-Class` set to `io.vertx.core.Launcher`
 * `Main-Verticle` specifying the main verticle (fully qualified class name or script file name)
 
 You can also provide the usual command line arguments that you would pass to `vertx run`:
@@ -988,13 +991,118 @@ java -jar my-verticle-fat.jar -cluster -conf myconf.json -cp path/to/dir/conf/cl
 NOTE: Please consult the Maven/Gradle simplest and Maven/Gradle verticle examples in the examples repository for
 examples of building applications as fatjars.
 
+A fat jar executes the `run` command, by default.
+
 === Displaying version of Vert.x
 To display the vert.x version, just launch:
 
 [source]
 ----
-vertx -version
+vertx version
 ----
+
+=== Other commands
+
+The `vertx` command line and the `Launcher` also provide other _commands_ in addition to `run` and `version`:
+
+You can create a `bare` instance using:
+
+[source]
+----
+vertx bare
+# or
+java -jar my-verticle-fat.jar bare
+----
+
+You can also start an application in background using:
+
+[source]
+----
+java -jar my-verticle-fat.jar start -Dvertx-id=my-app-name
+----
+
+If `my-app-name` is not set, a random id will be generated, and printed on the command prompt. You can pass `run`
+options to the `start` command:
+
+[source]
+----
+java -jar my-verticle-fat.jar start -Dvertx-id=my-app-name -cluster
+----
+
+Once launched in background, you can stop it with the `stop` command:
+
+[source]
+----
+java -jar my-verticle-fat.jar stop my-app-name
+----
+
+You can also list the vert.x application launched in background using:
+
+[source]
+----
+java -jar my-verticle-fat.jar list
+----
+
+The `start`, `stop` and `list` command are also available from the `vertx` tool. The start` command supports a couple of options:
+
+ * `vertx-id` : the application id, uses a random UUID if not set
+ * `java-opts` : the Java Virtual Machine options, uses the `JAVA_OPTS` environment variable if not set.
+ * `redirect-output` : redirect the spawned process output and error streams to the parent process streams.
+
+ If option values contain spaces, don't forget to wrap the value between `""` (double-quotes).
+
+The set of commands is extensible, refer to the <<Extending the vert.x Launcher>> section.
+
+=== Live Redeploy
+
+When developing it may be convenient to automatically redeploy your application upon file changes. The `vertx`
+command line tool and more generally the `Launcher` class offers this feature. Here are some
+examples:
+
+[source]
+----
+vertx run MyVerticle.groovy --redeploy="**/*.groovy"
+vertx run MyVerticle.groovy --redeploy="**/*.groovy,**/*.rb"
+java io.vertx.core.Launcher run org.acme.MyVerticle –redeploy="**/*.class" -cp ...
+----
+
+The redeployment process is implemented as follows. First your application is launched as a background application
+(with the `start` command). On matching file changes, the process is stopped and the application is restarted.
+This way avoids leaks.
+
+To enable the live redeploy, pass the `--redeploy` option to the `run` command. The `--redeploy` indicates the
+set of file to _watch_. This set can use Ant-style patterns (with `\**`, `*` and `?`). You can specify
+several sets by separating them using a comma (`,`). Patterns are relative to the current working directory.
+
+Parameters passed to the `run` command are passed to the application. Java Virtual Machine options can be
+configured using `--java-opts`.
+
+The redeploy feature can be used in your IDE:
+
+* Eclipse - create a _Run_ configuration, using the `io.vertx.core.Launcher` class a _main class_. In the _Program
+arguments_ area (in the _Arguments_ tab), write `run your-verticle-fully-qualified-name --redeploy=\**/*.java`.
+You can also add other parameters. The redeployment works smoothly as Eclipse incrementally compiles your files on
+save.
+* IntelliJ - create a _Run_ configuration (_Application_), set the _Main class_ to `io.vertx.core.Launcher`. In
+the Program arguments write: `run your-verticle-fully-qualified-name --redeploy=\**/*.class
+--launcher-class=io.vertx.core.Launcher`. As you can see, you need to set the `launcher-class` parameter because
+IntelliJ wraps your main class in its own class. To trigger the redeployment, you need to _make_ the project or
+the module explicitly (_Build_ menu -> _Make project_).
+
+To debug your application, create your run configuration as a remote application and configure the debugger
+using `--java-opts`. However, don’t forget to re-plug the debugger after every redeployment as a new process is
+created every time.
+
+You can also hook your build process in the redeploy cycle:
+
+[source]
+----
+java –jar target/my-fat-jar.jar –redeploy="**/*.java" --on-redeploy="mvn package"
+----
+
+The "on-redeploy" option specifies a command invoked after the shutdown of the application and before the
+restart. So you can hook your build tool if it updates some runtime artifacts. For instance, you can launch `gulp`
+or `grunt` to update your resources.
 
 == Cluster Managers
 
@@ -1249,3 +1357,58 @@ follow security best practice, especially if your service is public facing.
 
 For example you should always run them in a DMZ and with an user account that has limited rights in order to limit
 the extent of damage in case the service was compromised.
+
+== Vert.x Command Line Interface API
+
+include::cli.adoc[]
+
+== The vert.x Launcher
+
+The vert.x `Launcher` is used in _fat jar_ as main class, and by the `vertx` command line
+utility. It executes a set of _commands_ such as _run_, _bare_, _start_...
+
+=== Extending the vert.x Launcher
+
+You can extend the set of command by implementing your own `Command` (in Java only):
+
+[source, java]
+----
+@Name("my-command")
+@Summary("A simple hello command.")
+public class MyCommand extends DefaultCommand {
+
+  private String name;
+
+  @Option(longName = "name", required = true)
+  public void setName(String n) {
+    this.name = n;
+  }
+
+  @Override
+  public void run() throws CLIException {
+    System.out.println("Hello " + name);
+  }
+}
+----
+
+Place the jar containing the command into the classpath of your fat-jar (or include it inside) or in the `lib`
+directory of your vert.x distribution, and you would be able to execute:
+
+[source]
+----
+vertx hello vert.x
+java -jar my-fat-jar.jar hello vert.x
+----
+
+=== Using the Launcher in fat jars
+
+To use the `Launcher` class in a _fat-jar_ just set the `Main-Class` of the _MANIFEST_ to
+`io.vertx.core.Launcher`. In addition, set the `Main-Verticle` _MANIFEST_ entry to the name of your main verticle.
+
+By default, it executed the `run` command. However, you can configure the default command by setting the
+`Main-Command` _MANIFEST_ entry. The default command is used if the _fat jar_ is launched without a command.
+
+=== Sub-classing the Launcher
+
+You can also create a sub-class of `Launcher` to start your application. The class has been
+designed to be easily extensible.
