Tck tests for list/set enum + implement them

--- a/src/main/asciidoc/js/cli-for-java.adoc
+++ b/src/main/asciidoc/js/cli-for-java.adoc
@@ -63,6 +63,8 @@ CLI cli = CLI.create("some-name")
 
 For booleans, the boolean values are evaluated to `true`: `on`, `yes`, `1`, `true`.
 
+If one of your option as an `enum` as type, it computes the set of choices automatically.
+
 === Using annotations
 
 You can also define your CLI using annotations. Definition is done using annotation on the class and on _setter_
