--- a/src/main/asciidoc/js/cli.adoc
+++ b/src/main/asciidoc/js/cli.adoc
@@ -115,6 +115,24 @@ var cli = CLI.create("some-name").addOption({
 An option can be _hidden_ using the `link:../dataobjects.html#Option#setHidden[hidden]` method. Hidden option are
 not listed in the usage, but can still be used in the user command line (for power-users).
 
+If the option value is contrained to a fixed set, you can set the different acceptable choices:
+
+[source,js]
+----
+var CLI = require("vertx-js/cli");
+var cli = CLI.create("some-name").addOption({
+  "longName" : "color",
+  "defaultValue" : "green",
+  "choices" : [
+    "blue",
+    "red",
+    "green"
+  ],
+  "description" : "a color"
+});
+
+----
+
 Options can also be instantiated from their JSON form.
 
 ==== Arguments
@@ -122,7 +140,7 @@ Options can also be instantiated from their JSON form.
 Unlike options, arguments do not have a _key_ and are identified by their _index_. For example, in
 `java com.acme.Foo`, `com.acme.Foo` is an argument.
 
-Arguments do not have a name, there are identified using a mandatory 0-based index. The first parameter has the
+Arguments do not have a name, there are identified using a 0-based index. The first parameter has the
 index `0`:
 
 [source,js]
@@ -140,6 +158,21 @@ var cli = CLI.create("some-name").addArgument({
 
 ----
 
+If you don't set the argument indexes, it computes it automatically by using the declaration order.
+
+[source,js]
+----
+var CLI = require("vertx-js/cli");
+var cli = CLI.create("some-name").addArgument({
+  "description" : "the first argument",
+  "argName" : "arg1"
+}).addArgument({
+  "description" : "the second argument",
+  "argName" : "arg2"
+});
+
+----
+
 The `argName` is optional and used in the usage message.
 
 As options, `link:../dataobjects.html#Argument[Argument]` can:
@@ -147,6 +180,8 @@ As options, `link:../dataobjects.html#Argument[Argument]` can:
 * be hidden using `link:../dataobjects.html#Argument#setHidden[hidden]`
 * be mandatory using `link:../dataobjects.html#Argument#setRequired[required]`
 * have a default value using `link:../dataobjects.html#Argument#setDefaultValue[defaultValue]`
+* receive several values using `link:../dataobjects.html#Argument#setMultiValued[multiValued]` - only the last argument
+can be multi-valued.
 
 Arguments can also be instantiated from their JSON form.
 
@@ -207,6 +242,9 @@ and arguments have been set as well as the number of values received by each opt
 validation by passing `false` as second parameter of `link:jsdoc/cli-CLI.html#parse[parse]`.
 This is useful if you want to check an argument or option is present even if the parsed command line is invalid.
 
+You can check whether or not the
+`link:jsdoc/command_line-CommandLine.html[CommandLine]` is valid using `link:jsdoc/command_line-CommandLine.html#isValid[isValid]`.
+
 === Query / Interrogation Stage
 
 Once parsed, you can retrieve the values of the options and arguments from the
@@ -219,6 +257,33 @@ var commandLine = cli.parse(userCommandLineArguments);
 var opt = commandLine.getOptionValue("my-option");
 var flag = commandLine.isFlagEnabled("my-flag");
 var arg0 = commandLine.getArgumentValue(0);
+
+----
+
+One of your option can have been marked as "help". If a user command line enabled a "help" option, the validation
+won't failed, but give you the opportunity to check if the user asks for help:
+
+[source,js]
+----
+var CLI = require("vertx-js/cli");
+var cli = CLI.create("test").addOption({
+  "longName" : "help",
+  "shortName" : "h",
+  "flag" : true,
+  "help" : true
+}).addOption({
+  "longName" : "mandatory",
+  "required" : true
+});
+
+var line = cli.parse(Java.type("java.util.Collections").singletonList("-h"));
+
+// The parsing does not fail and let you do:
+if (!line.isValid() && line.isAskingForHelp()) {
+  var builder = new (Java.type("java.lang.StringBuilder"))();
+  cli.usage(builder);
+  stream.print(builder.toString());
+}
 
 ----
 
