--- a/src/main/asciidoc/js/net.adoc
+++ b/src/main/asciidoc/js/net.adoc
@@ -30,7 +30,7 @@ var server = vertx.createNetServer(options);
 
 === Start the Server Listening
 
-To tell the server to listen for incoming requests you use one of the `link:jsdoc/net_server-NetServer.html#listen[listen]`
+To tell the server to listen for incoming requests you use one of the `link:../../jsdoc/net_server-NetServer.html#listen[listen]`
 alternatives.
 
 To tell the server to listen at the host and port as specified in the options:
@@ -80,7 +80,7 @@ server.listen(1234, "localhost", function (res, res_err) {
 
 If `0` is used as the listening port, the server will find an unused random port to listen on.
 
-To find out the real port the server is listening on you can call `link:jsdoc/net_server-NetServer.html#actualPort[actualPort]`.
+To find out the real port the server is listening on you can call `link:../../jsdoc/net_server-NetServer.html#actualPort[actualPort]`.
 
 [source,js]
 ----
@@ -98,7 +98,7 @@ server.listen(0, "localhost", function (res, res_err) {
 
 === Getting notified of incoming connections
 
-To be notified when a connection is made you need to set a `link:jsdoc/net_server-NetServer.html#connectHandler[connectHandler]`:
+To be notified when a connection is made you need to set a `link:../../jsdoc/net_server-NetServer.html#connectHandler[connectHandler]`:
 
 [source,js]
 ----
@@ -110,17 +110,17 @@ server.connectHandler(function (socket) {
 
 ----
 
-When a connection is made the handler will be called with an instance of `link:jsdoc/net_socket-NetSocket.html[NetSocket]`.
+When a connection is made the handler will be called with an instance of `link:../../jsdoc/net_socket-NetSocket.html[NetSocket]`.
 
 This is a socket-like interface to the actual connection, and allows you to read and write data as well as do various
 other things like close the socket.
 
 === Reading data from the socket
 
-To read data from the socket you set the `link:jsdoc/net_socket-NetSocket.html#handler[handler]` on the
+To read data from the socket you set the `link:../../jsdoc/net_socket-NetSocket.html#handler[handler]` on the
 socket.
 
-This handler will be called with an instance of `link:jsdoc/buffer-Buffer.html[Buffer]` every time data is received on
+This handler will be called with an instance of `link:../../jsdoc/buffer-Buffer.html[Buffer]` every time data is received on
 the socket.
 
 [source,js]
@@ -137,7 +137,7 @@ server.connectHandler(function (socket) {
 
 === Writing data to a socket
 
-You write to a socket using one of `link:jsdoc/net_socket-NetSocket.html#write[write]`.
+You write to a socket using one of `link:../../jsdoc/net_socket-NetSocket.html#write[write]`.
 
 [source,js]
 ----
@@ -161,7 +161,7 @@ Write operations are asynchronous and may not occur until some time after the ca
 
 === Closed handler
 
-If you want to be notified when a socket is closed, you can set a `link:jsdoc/net_socket-NetSocket.html#closeHandler[closeHandler]`
+If you want to be notified when a socket is closed, you can set a `link:../../jsdoc/net_socket-NetSocket.html#closeHandler[closeHandler]`
 on it:
 
 [source,js]
@@ -175,7 +175,7 @@ socket.closeHandler(function (v) {
 
 === Handling exceptions
 
-You can set an `link:jsdoc/net_socket-NetSocket.html#exceptionHandler[exceptionHandler]` to receive any
+You can set an `link:../../jsdoc/net_socket-NetSocket.html#exceptionHandler[exceptionHandler]` to receive any
 exceptions that happen on the socket.
 
 === Event bus write handler
@@ -186,18 +186,18 @@ it writes them to itself.
 This enables you to write data to a socket which is potentially in a completely different verticle or even in a
 different Vert.x instance by sending the buffer to the address of that handler.
 
-The address of the handler is given by `link:jsdoc/net_socket-NetSocket.html#writeHandlerID[writeHandlerID]`
+The address of the handler is given by `link:../../jsdoc/net_socket-NetSocket.html#writeHandlerID[writeHandlerID]`
 
 === Local and remote addresses
 
-The local address of a `link:jsdoc/net_socket-NetSocket.html[NetSocket]` can be retrieved using `link:jsdoc/net_socket-NetSocket.html#localAddress[localAddress]`.
+The local address of a `link:../../jsdoc/net_socket-NetSocket.html[NetSocket]` can be retrieved using `link:../../jsdoc/net_socket-NetSocket.html#localAddress[localAddress]`.
 
-The remote address, (i.e. the address of the other end of the connection) of a `link:jsdoc/net_socket-NetSocket.html[NetSocket]`
-can be retrieved using `link:jsdoc/net_socket-NetSocket.html#remoteAddress[remoteAddress]`.
+The remote address, (i.e. the address of the other end of the connection) of a `link:../../jsdoc/net_socket-NetSocket.html[NetSocket]`
+can be retrieved using `link:../../jsdoc/net_socket-NetSocket.html#remoteAddress[remoteAddress]`.
 
 === Sending files
 
-Files can be written to the socket directly using `link:jsdoc/net_socket-NetSocket.html#sendFile[sendFile]`. This can be a very
+Files can be written to the socket directly using `link:../../jsdoc/net_socket-NetSocket.html#sendFile[sendFile]`. This can be a very
 efficient way to send files, as it can be handled by the OS kernel directly where supported by the operating system.
 
 [source,js]
@@ -209,22 +209,22 @@ socket.sendFile("myfile.dat");
 
 === Streaming sockets
 
-Instances of `link:jsdoc/net_socket-NetSocket.html[NetSocket]` are also `link:jsdoc/read_stream-ReadStream.html[ReadStream]` and
-`link:jsdoc/write_stream-WriteStream.html[WriteStream]` instances so they can be used to pump data to or from other
+Instances of `link:../../jsdoc/net_socket-NetSocket.html[NetSocket]` are also `link:../../jsdoc/read_stream-ReadStream.html[ReadStream]` and
+`link:../../jsdoc/write_stream-WriteStream.html[WriteStream]` instances so they can be used to pump data to or from other
 read and write streams.
 
 See the chapter on <<streams, streams and pumps>> for more information.
 
 === Upgrading connections to SSL/TLS
 
-A non SSL/TLS connection can be upgraded to SSL/TLS using `link:jsdoc/net_socket-NetSocket.html#upgradeToSsl[upgradeToSsl]`.
+A non SSL/TLS connection can be upgraded to SSL/TLS using `link:../../jsdoc/net_socket-NetSocket.html#upgradeToSsl[upgradeToSsl]`.
 
 The server or client must be configured for SSL/TLS for this to work correctly. Please see the <<ssl, chapter on SSL/TLS>>
 for more information.
 
 === Closing a TCP Server
 
-Call `link:jsdoc/net_server-NetServer.html#close[close]` to close the server. Closing the server closes any open connections
+Call `link:../../jsdoc/net_server-NetServer.html#close[close]` to close the server. Closing the server closes any open connections
 and releases all server resources.
 
 The close is actually asynchronous and might not complete until some time after the call has returned.
@@ -340,9 +340,9 @@ var client = vertx.createNetClient(options);
 
 === Making connections
 
-To make a connection to a server you use `link:jsdoc/net_client-NetClient.html#connect[connect]`,
+To make a connection to a server you use `link:../../jsdoc/net_client-NetClient.html#connect[connect]`,
 specifying the port and host of the server and a handler that will be called with a result containing the
-`link:jsdoc/net_socket-NetSocket.html[NetSocket]` when connection is successful or with a failure if connection failed.
+`link:../../jsdoc/net_socket-NetSocket.html[NetSocket]` when connection is successful or with a failure if connection failed.
 
 [source,js]
 ----
@@ -375,8 +375,9 @@ only apply to creating initial connections.
 ----
 
 var options = {
+  "reconnectAttempts" : 10,
+  "reconnectInterval" : 500
 };
-options.reconnectAttempts = 10.reconnectInterval = 500;
 
 var client = vertx.createNetClient(options);
 
