--- a/src/main/asciidoc/js/cli-for-java.adoc
+++ b/src/main/asciidoc/js/cli-for-java.adoc
@@ -8,7 +8,7 @@ meaning that the only get String values.
 
 Instead of
 `link:../dataobjects.html#Option[Option]` and `link:../dataobjects.html#Argument[Argument]`, use `TypedOption`
-and `TypedArgument` in the `link:jsdoc/cli-CLI.html[CLI]` definition:
+and `TypedArgument` in the `link:../../jsdoc/cli-CLI.html[CLI]` definition:
 
 [source,java]
 ----
@@ -98,7 +98,7 @@ public class AnnotatedCli {
 }
 ----
 
-Once annotated, you can define the `link:jsdoc/cli-CLI.html[CLI]` and inject the values using:
+Once annotated, you can define the `link:../../jsdoc/cli-CLI.html[CLI]` and inject the values using:
 
 [source,java]
 ----
