--- a/src/main/asciidoc/js/index.adoc
+++ b/src/main/asciidoc/js/index.adoc
@@ -41,7 +41,7 @@ Let's discuss the different concepts and features in core.
 
 NOTE: Much of this is Java specific - need someway of swapping in language specific parts
 
-You can't do much in Vert.x-land unless you can commune with a `link:jsdoc/vertx-Vertx.html[Vertx]` object!
+You can't do much in Vert.x-land unless you can commune with a `link:../../jsdoc/vertx-Vertx.html[Vertx]` object!
 
 It's the control centre of Vert.x and is how you do pretty much everything, including creating clients and servers,
 getting a reference to the event bus, setting timers, as well as many other things.
@@ -275,7 +275,7 @@ blocking APIs safely within a Vert.x application.
 As discussed before, you can't call blocking operations directly from an event loop, as that would prevent it
 from doing any other useful work. So how can you do this?
 
-It's done by calling `link:jsdoc/vertx-Vertx.html#executeBlocking[executeBlocking]` specifying both the blocking code to execute and a
+It's done by calling `link:../../jsdoc/vertx-Vertx.html#executeBlocking[executeBlocking]` specifying both the blocking code to execute and a
 result handler to be called back asynchronous when the blocking code has been executed.
 
 [source,js]
@@ -294,7 +294,7 @@ vertx.executeBlocking(function (future) {
 By default, if executeBlocking is called several times from the same context (e.g. the same verticle instance) then
 the different executeBlocking are executed _serially_ (i.e. one after another).
 
-If you don't care about ordering you can call `link:jsdoc/vertx-Vertx.html#executeBlocking[executeBlocking]`
+If you don't care about ordering you can call `link:../../jsdoc/vertx-Vertx.html#executeBlocking[executeBlocking]`
 specifying `false` as the argument to `ordered`. In this case any executeBlocking may be executed in parallel
 on the worker pool.
 
@@ -386,7 +386,7 @@ using standard Java techniques for multi-threaded programming.
 
 === Deploying verticles programmatically
 
-You can deploy a verticle using one of the `link:jsdoc/vertx-Vertx.html#deployVerticle[deployVerticle]` method, specifying a verticle
+You can deploy a verticle using one of the `link:../../jsdoc/vertx-Vertx.html#deployVerticle[deployVerticle]` method, specifying a verticle
 name or you can pass in a verticle instance you have already created yourself.
 
 NOTE: Deploying Verticle *instances* is Java only.
@@ -449,8 +449,8 @@ and instantiate that.
 
 Most Verticle factories are loaded from the classpath and registered at Vert.x startup.
 
-You can also programmatically register and unregister verticle factories using `link:jsdoc/vertx-Vertx.html#registerVerticleFactory[registerVerticleFactory]`
-and `link:jsdoc/vertx-Vertx.html#unregisterVerticleFactory[unregisterVerticleFactory]` if you wish.
+You can also programmatically register and unregister verticle factories using `link:../../jsdoc/vertx-Vertx.html#registerVerticleFactory[registerVerticleFactory]`
+and `link:../../jsdoc/vertx-Vertx.html#unregisterVerticleFactory[unregisterVerticleFactory]` if you wish.
 
 === Waiting for deployment to complete
 
@@ -476,7 +476,7 @@ This deployment ID can be used later if you want to undeploy the deployment.
 
 === Undeploying verticle deployments
 
-Deployments can be undeployed with `link:jsdoc/vertx-Vertx.html#undeploy[undeploy]`.
+Deployments can be undeployed with `link:../../jsdoc/vertx-Vertx.html#undeploy[undeploy]`.
 
 Un-deployment is itself asynchronous so if you want to be notified when un-deployment is complete you can deploy specifying a completion handler:
 
@@ -608,7 +608,7 @@ type `vertx` at the command line.
 
 Threads maintained by Vert.x instances are not daemon threads so they will prevent the JVM from exiting.
 
-If you are embedding Vert.x and you have finished with it, you can call `link:jsdoc/vertx-Vertx.html#close[close]` to close it
+If you are embedding Vert.x and you have finished with it, you can call `link:../../jsdoc/vertx-Vertx.html#close[close]` to close it
 down.
 
 This will shut-down all internal thread pools and close other resources, and will allow the JVM to exit.
@@ -621,7 +621,7 @@ When Vert.x provides an event to a handler or calls the start or stop methods of
 on that exact same event loop thread. In the case of worker verticles and running inline blocking code a
 worker context will be associated with the execution which will use a thread from the worker thread pool.
 
-To retrieve the context, use the `link:jsdoc/vertx-Vertx.html#getOrCreateContext[getOrCreateContext]` method:
+To retrieve the context, use the `link:../../jsdoc/vertx-Vertx.html#getOrCreateContext[getOrCreateContext]` method:
 
 [source, js]
 ----
@@ -661,7 +661,7 @@ vertx.getOrCreateContext().runOnContext(function (v) {
 
 When several handlers run in the same context, they may want to share data. The context object offers methods to
 store and retrieve data shared in the context. For instance, it lets you pass data to some action run with
-`link:jsdoc/context-Context.html#runOnContext[runOnContext]`:
+`link:../../jsdoc/context-Context.html#runOnContext[runOnContext]`:
 
 [source, js]
 ----
@@ -673,7 +673,7 @@ context.runOnContext(function (v) {
 
 ----
 
-The context object also let you access verticle configuration using the `link:jsdoc/context-Context.html#config[config]`
+The context object also let you access verticle configuration using the `link:../../jsdoc/context-Context.html#config[config]`
 method. Check the <<Passing configuration to a verticle>> section for more details about this configuration.
 
 === Executing periodic and delayed actions
@@ -688,7 +688,7 @@ Instead you use Vert.x timers. Timers can be *one-shot* or *periodic*. We'll dis
 
 A one shot timer calls an event handler after a certain delay, expressed in milliseconds.
 
-To set a timer to fire once you use `link:jsdoc/vertx-Vertx.html#setTimer[setTimer]` method passing in the delay and a handler
+To set a timer to fire once you use `link:../../jsdoc/vertx-Vertx.html#setTimer[setTimer]` method passing in the delay and a handler
 
 [source,js]
 ----
@@ -704,7 +704,7 @@ The return value is a unique timer id which can later be used to cancel the time
 
 ==== Periodic Timers
 
-You can also set a timer to fire periodically by using `link:jsdoc/vertx-Vertx.html#setPeriodic[setPeriodic]`.
+You can also set a timer to fire periodically by using `link:../../jsdoc/vertx-Vertx.html#setPeriodic[setPeriodic]`.
 
 There will be an initial delay equal to the period.
 
@@ -715,7 +715,7 @@ The argument passed into the timer event handler is also the unique timer id:
 Keep in mind that the timer will fire on a periodic basis. If your periodic treatment takes a long amount of time to proceed,
 your timer events could run continuously or even worse : stack up.
 
-In this case, you should consider using `link:jsdoc/vertx-Vertx.html#setTimer[setTimer]` instead. Once your treatment has
+In this case, you should consider using `link:../../jsdoc/vertx-Vertx.html#setTimer[setTimer]` instead. Once your treatment has
 finished, you can set the next timer.
 
 [source,js]
@@ -730,7 +730,7 @@ console.log("First this is printed");
 
 ==== Cancelling timers
 
-To cancel a periodic timer, call `link:jsdoc/vertx-Vertx.html#cancelTimer[cancelTimer]` specifying the timer id. For example:
+To cancel a periodic timer, call `link:../../jsdoc/vertx-Vertx.html#cancelTimer[cancelTimer]` specifying the timer id. For example:
 
 [source,js]
 ----
@@ -772,8 +772,8 @@ include::parsetools.adoc[]
 Most Vert.x objects are safe to access from different threads. _However_ performance is optimised when they are
 accessed from the same context they were created from.
 
-For example if you have deployed a verticle which creates a `link:jsdoc/net_server-NetServer.html[NetServer]` which provides
-`link:jsdoc/net_socket-NetSocket.html[NetSocket]` instances in it's handler, then it's best to always access that socket instance
+For example if you have deployed a verticle which creates a `link:../../jsdoc/net_server-NetServer.html[NetServer]` which provides
+`link:../../jsdoc/net_socket-NetSocket.html[NetSocket]` instances in it's handler, then it's best to always access that socket instance
 from the event loop of the verticle.
 
 If you stick to the standard Vert.x verticle deployment model and avoid sharing objects between verticles then this
