--- a/src/main/asciidoc/js/override/verticle-configuration.adoc
+++ b/src/main/asciidoc/js/override/verticle-configuration.adoc
@@ -14,7 +14,7 @@ var options = {
 vertx.deployVerticle("MyOrderProcessorVerticle.js", options);
 ----
 
-This configuration is then available via the `link:../../vertx-core/js/jsdoc/context-Context.html[Context]` object.
+This configuration is then available via the `link:../../jsdoc/context-Context.html[Context]` object.
 
 The configuration is returned as a
 JavaScript object so you can retrieve data as follows:
@@ -27,8 +27,8 @@ console.log("Configuration: " + Vertx.currentContext().config().name);
 console.log("Configuration: " + vertx.getOrCreateContext().config().name);
 ----
 
-NOTE: The access to the `context` object is made either using `link:../../vertx-core/js/jsdoc/vertx-Vertx.html#currentContext[Vertx.currentContext]` or using
-`link:../../vertx-core/js/jsdoc/vertx-Vertx.html#getOrCreateContext[getOrCreateContext]`.
+NOTE: The access to the `context` object is made either using `link:../../jsdoc/vertx-Vertx.html#currentContext[Vertx.currentContext]` or using
+`link:../../jsdoc/vertx-Vertx.html#getOrCreateContext[getOrCreateContext]`.
 
 === Accessing environment variables in a Verticle
 
