--- a/src/main/asciidoc/js/index.adoc
+++ b/src/main/asciidoc/js/index.adoc
@@ -1102,12 +1102,20 @@ You can also hook your build process in the redeploy cycle:
 
 [source]
 ----
-java –jar target/my-fat-jar.jar –redeploy="**/*.java" --onRedeploy="mvn package"
+java –jar target/my-fat-jar.jar –redeploy="**/*.java" --on-redeploy="mvn package"
 ----
 
-The "onRedeploy" option specifies a command invoked after the shutdown of the application and before the
+The "on-redeploy" option specifies a command invoked after the shutdown of the application and before the
 restart. So you can hook your build tool if it updates some runtime artifacts. For instance, you can launch `gulp`
 or `grunt` to update your resources.
+
+The redeploy feature also supports the following settings:
+
+* `redeploy-scan-period` : the file system check period (in milliseconds), 250ms by default
+* `redeploy-grace-period` : the amount of time (in milliseconds) to wait between 2 re-deployments, 1000ms by default
+* `redeploy-termination-period` : the amount of time to wait after having stopped the application (before
+launching user command). This is useful on Windows, where the process is not killed immediately. The time is given
+in milliseconds. 0 ms by default.
 
 == Cluster Managers
 
@@ -1158,7 +1166,7 @@ If you don't want Vert.x to use JUL for it's own logging you can configure it to
 Log4J or SLF4J.
 
 To do this you should set a system property called `vertx.logger-delegate-factory-class-name` with the name of a Java
-class which implements the interface `LoggerFactory`. We provide pre-built implementations for
+class which implements the interface `LogDelegateFactory`. We provide pre-built implementations for
 Log4J and SLF4J with the class names `io.vertx.core.logging.Log4jLogDelegateFactory` and `io.vertx.core.logging.SLF4JLogDelegateFactory`
 respectively. If you want to use these implementations you should also make sure the relevant Log4J or SLF4J jars
 are on your classpath.
